--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>jackson-datatype-jts</artifactId>
 			<version>2.3</version>
 		</dependency>
+
+		<!-- send email -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
